predicatecalculus/src/main/java/HW4/AssumptionsParser.java
// Generated from predicatecalculus/src/main/java/HW4/Assumptions.g4 by ANTLR 4.5.3

package HW4;
import expression.*;
import expression.Predicate;
import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class AssumptionsParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.3", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PLUS=1, MUL=2, EQUALS=3, COMMA=4, IMPLIES=5, OR=6, AND=7, NOT=8, OB=9, 
		CB=10, VAR=11, PREDVAR=12, ZERO=13, NEXT=14, FORALL=15, EXISTS=16;
	public static final int
		RULE_parseAssumption = 0, RULE_expression = 1, RULE_disjunction = 2, RULE_conjunction = 3, 
		RULE_unary = 4, RULE_variable = 5, RULE_predicate = 6, RULE_term = 7, 
		RULE_adding = 8, RULE_multiplying = 9;
	public static final String[] ruleNames = {
		"parseAssumption", "expression", "disjunction", "conjunction", "unary", 
		"variable", "predicate", "term", "adding", "multiplying"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'+'", "'*'", "'='", "','", "'->'", "'|'", "'&'", "'!'", "'('", 
		"')'", null, null, "'0'", "'''", "'@'", "'?'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "PLUS", "MUL", "EQUALS", "COMMA", "IMPLIES", "OR", "AND", "NOT", 
		"OB", "CB", "VAR", "PREDVAR", "ZERO", "NEXT", "FORALL", "EXISTS"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Assumptions.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public AssumptionsParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseAssumptionContext extends ParserRuleContext {
		public List<Expression> value;
		public ExpressionContext e1;
		public ExpressionContext e2;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AssumptionsParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AssumptionsParser.COMMA, i);
		}
		public ParseAssumptionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parseAssumption; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssumptionsListener ) ((AssumptionsListener)listener).enterParseAssumption(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssumptionsListener ) ((AssumptionsListener)listener).exitParseAssumption(this);
		}
	}

	public final ParseAssumptionContext parseAssumption() throws RecognitionException {
		ParseAssumptionContext _localctx = new ParseAssumptionContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parseAssumption);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(20);
			((ParseAssumptionContext)_localctx).e1 = expression();
			((ParseAssumptionContext)_localctx).value =  new ArrayList(); _localctx.value.add(((ParseAssumptionContext)_localctx).e1.value);
			setState(28);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(22);
				match(COMMA);
				setState(23);
				((ParseAssumptionContext)_localctx).e2 = expression();
				_localctx.value.add(((ParseAssumptionContext)_localctx).e2.value);
				}
				}
				setState(30);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public Expression value;
		public DisjunctionContext d1;
		public DisjunctionContext d2;
		public ExpressionContext e;
		public DisjunctionContext disjunction() {
			return getRuleContext(DisjunctionContext.class,0);
		}
		public TerminalNode IMPLIES() { return getToken(AssumptionsParser.IMPLIES, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssumptionsListener ) ((AssumptionsListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssumptionsListener ) ((AssumptionsListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_expression);
		try {
			setState(39);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(31);
				((ExpressionContext)_localctx).d1 = disjunction(0);
				((ExpressionContext)_localctx).value =  ((ExpressionContext)_localctx).d1.value;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(34);
				((ExpressionContext)_localctx).d2 = disjunction(0);
				setState(35);
				match(IMPLIES);
				setState(36);
				((ExpressionContext)_localctx).e = expression();
				((ExpressionContext)_localctx).value =  new Implication(((ExpressionContext)_localctx).d2.value, ((ExpressionContext)_localctx).e.value);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DisjunctionContext extends ParserRuleContext {
		public Expression value;
		public DisjunctionContext d;
		public ConjunctionContext c1;
		public ConjunctionContext c2;
		public ConjunctionContext conjunction() {
			return getRuleContext(ConjunctionContext.class,0);
		}
		public TerminalNode OR() { return getToken(AssumptionsParser.OR, 0); }
		public DisjunctionContext disjunction() {
			return getRuleContext(DisjunctionContext.class,0);
		}
		public DisjunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_disjunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssumptionsListener ) ((AssumptionsListener)listener).enterDisjunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssumptionsListener ) ((AssumptionsListener)listener).exitDisjunction(this);
		}
	}

	public final DisjunctionContext disjunction() throws RecognitionException {
		return disjunction(0);
	}

	private DisjunctionContext disjunction(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		DisjunctionContext _localctx = new DisjunctionContext(_ctx, _parentState);
		DisjunctionContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_disjunction, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(42);
			((DisjunctionContext)_localctx).c1 = conjunction(0);
			((DisjunctionContext)_localctx).value =  ((DisjunctionContext)_localctx).c1.value;
			}
			_ctx.stop = _input.LT(-1);
			setState(52);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new DisjunctionContext(_parentctx, _parentState);
					_localctx.d = _prevctx;
					_localctx.d = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_disjunction);
					setState(45);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(46);
					match(OR);
					setState(47);
					((DisjunctionContext)_localctx).c2 = conjunction(0);
					((DisjunctionContext)_localctx).value =  new Disjunction(((DisjunctionContext)_localctx).d.value, ((DisjunctionContext)_localctx).c2.value);
					}
					} 
				}
				setState(54);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ConjunctionContext extends ParserRuleContext {
		public Expression value;
		public ConjunctionContext c;
		public UnaryContext u1;
		public UnaryContext u2;
		public UnaryContext unary() {
			return getRuleContext(UnaryContext.class,0);
		}
		public TerminalNode AND() { return getToken(AssumptionsParser.AND, 0); }
		public ConjunctionContext conjunction() {
			return getRuleContext(ConjunctionContext.class,0);
		}
		public ConjunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conjunction; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssumptionsListener ) ((AssumptionsListener)listener).enterConjunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssumptionsListener ) ((AssumptionsListener)listener).exitConjunction(this);
		}
	}

	public final ConjunctionContext conjunction() throws RecognitionException {
		return conjunction(0);
	}

	private ConjunctionContext conjunction(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ConjunctionContext _localctx = new ConjunctionContext(_ctx, _parentState);
		ConjunctionContext _prevctx = _localctx;
		int _startState = 6;
		enterRecursionRule(_localctx, 6, RULE_conjunction, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(56);
			((ConjunctionContext)_localctx).u1 = unary();
			((ConjunctionContext)_localctx).value =  ((ConjunctionContext)_localctx).u1.value;
			}
			_ctx.stop = _input.LT(-1);
			setState(66);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new ConjunctionContext(_parentctx, _parentState);
					_localctx.c = _prevctx;
					_localctx.c = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_conjunction);
					setState(59);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(60);
					match(AND);
					setState(61);
					((ConjunctionContext)_localctx).u2 = unary();
					((ConjunctionContext)_localctx).value =  new Conjunction(((ConjunctionContext)_localctx).c.value, ((ConjunctionContext)_localctx).u2.value);
					}
					} 
				}
				setState(68);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class UnaryContext extends ParserRuleContext {
		public Expression value;
		public PredicateContext p;
		public UnaryContext u1;
		public ExpressionContext e;
		public VariableContext v1;
		public UnaryContext u2;
		public VariableContext v2;
		public UnaryContext u3;
		public PredicateContext predicate() {
			return getRuleContext(PredicateContext.class,0);
		}
		public TerminalNode NOT() { return getToken(AssumptionsParser.NOT, 0); }
		public UnaryContext unary() {
			return getRuleContext(UnaryContext.class,0);
		}
		public TerminalNode OB() { return getToken(AssumptionsParser.OB, 0); }
		public TerminalNode CB() { return getToken(AssumptionsParser.CB, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode FORALL() { return getToken(AssumptionsParser.FORALL, 0); }
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode EXISTS() { return getToken(AssumptionsParser.EXISTS, 0); }
		public UnaryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_unary; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssumptionsListener ) ((AssumptionsListener)listener).enterUnary(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssumptionsListener ) ((AssumptionsListener)listener).exitUnary(this);
		}
	}

	public final UnaryContext unary() throws RecognitionException {
		UnaryContext _localctx = new UnaryContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_unary);
		try {
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(69);
				((UnaryContext)_localctx).p = predicate();
				((UnaryContext)_localctx).value =  ((UnaryContext)_localctx).p.value;
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				match(NOT);
				setState(73);
				((UnaryContext)_localctx).u1 = unary();
				((UnaryContext)_localctx).value =  new Negation(((UnaryContext)_localctx).u1.value);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(76);
				match(OB);
				setState(77);
				((UnaryContext)_localctx).e = expression();
				setState(78);
				match(CB);
				((UnaryContext)_localctx).value =  ((UnaryContext)_localctx).e.value;
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(81);
				match(FORALL);
				setState(82);
				((UnaryContext)_localctx).v1 = variable();
				setState(83);
				((UnaryContext)_localctx).u2 = unary();
				((UnaryContext)_localctx).value =  new Forall(((UnaryContext)_localctx).v1.value, ((UnaryContext)_localctx).u2.value);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(86);
				match(EXISTS);
				setState(87);
				((UnaryContext)_localctx).v2 = variable();
				setState(88);
				((UnaryContext)_localctx).u3 = unary();
				((UnaryContext)_localctx).value =  new Exists(((UnaryContext)_localctx).v2.value, ((UnaryContext)_localctx).u3.value);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public Variable value;
		public Token VAR;
		public TerminalNode VAR() { return getToken(AssumptionsParser.VAR, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssumptionsListener ) ((AssumptionsListener)listener).enterVariable(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssumptionsListener ) ((AssumptionsListener)listener).exitVariable(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(93);
			((VariableContext)_localctx).VAR = match(VAR);
			((VariableContext)_localctx).value =  new Variable((((VariableContext)_localctx).VAR!=null?((VariableContext)_localctx).VAR.getText():null));
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredicateContext extends ParserRuleContext {
		public Expression value;
		public Token PREDVAR;
		public TermContext t3;
		public TermContext t4;
		public TermContext t1;
		public TermContext t2;
		public TerminalNode PREDVAR() { return getToken(AssumptionsParser.PREDVAR, 0); }
		public TerminalNode OB() { return getToken(AssumptionsParser.OB, 0); }
		public TerminalNode CB() { return getToken(AssumptionsParser.CB, 0); }
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AssumptionsParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AssumptionsParser.COMMA, i);
		}
		public TerminalNode EQUALS() { return getToken(AssumptionsParser.EQUALS, 0); }
		public PredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssumptionsListener ) ((AssumptionsListener)listener).enterPredicate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssumptionsListener ) ((AssumptionsListener)listener).exitPredicate(this);
		}
	}

	public final PredicateContext predicate() throws RecognitionException {
		PredicateContext _localctx = new PredicateContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_predicate);
		int _la;
		try {
			setState(119);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(96);
				((PredicateContext)_localctx).PREDVAR = match(PREDVAR);
				((PredicateContext)_localctx).value =  new Predicate((((PredicateContext)_localctx).PREDVAR!=null?((PredicateContext)_localctx).PREDVAR.getText():null));
				setState(98);
				match(OB);
				setState(99);
				((PredicateContext)_localctx).t3 = term(0);
				((Predicate)_localctx.value).addTerm(((PredicateContext)_localctx).t3.value);
				setState(107);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(101);
					match(COMMA);
					setState(102);
					((PredicateContext)_localctx).t4 = term(0);
					((Predicate)_localctx.value).addTerm(((PredicateContext)_localctx).t4.value);
					}
					}
					setState(109);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(110);
				match(CB);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(112);
				((PredicateContext)_localctx).PREDVAR = match(PREDVAR);
				((PredicateContext)_localctx).value =  new Predicate((((PredicateContext)_localctx).PREDVAR!=null?((PredicateContext)_localctx).PREDVAR.getText():null));
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(114);
				((PredicateContext)_localctx).t1 = term(0);
				setState(115);
				match(EQUALS);
				setState(116);
				((PredicateContext)_localctx).t2 = term(0);
				((PredicateContext)_localctx).value =  new Equation(((PredicateContext)_localctx).t1.value, ((PredicateContext)_localctx).t2.value);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TermContext extends ParserRuleContext {
		public Expression value;
		public TermContext t;
		public AddingContext a1;
		public AddingContext a2;
		public AddingContext adding() {
			return getRuleContext(AddingContext.class,0);
		}
		public TerminalNode PLUS() { return getToken(AssumptionsParser.PLUS, 0); }
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssumptionsListener ) ((AssumptionsListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssumptionsListener ) ((AssumptionsListener)listener).exitTerm(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		return term(0);
	}

	private TermContext term(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TermContext _localctx = new TermContext(_ctx, _parentState);
		TermContext _prevctx = _localctx;
		int _startState = 14;
		enterRecursionRule(_localctx, 14, RULE_term, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(122);
			((TermContext)_localctx).a1 = adding(0);
			((TermContext)_localctx).value =  ((TermContext)_localctx).a1.value;
			}
			_ctx.stop = _input.LT(-1);
			setState(132);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new TermContext(_parentctx, _parentState);
					_localctx.t = _prevctx;
					_localctx.t = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_term);
					setState(125);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(126);
					match(PLUS);
					setState(127);
					((TermContext)_localctx).a2 = adding(0);
					((TermContext)_localctx).value =  new Summation(((TermContext)_localctx).t.value, ((TermContext)_localctx).a2.value);
					}
					} 
				}
				setState(134);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class AddingContext extends ParserRuleContext {
		public Expression value;
		public AddingContext a;
		public MultiplyingContext m1;
		public MultiplyingContext multiplying;
		public MultiplyingContext m2;
		public MultiplyingContext multiplying() {
			return getRuleContext(MultiplyingContext.class,0);
		}
		public TerminalNode MUL() { return getToken(AssumptionsParser.MUL, 0); }
		public AddingContext adding() {
			return getRuleContext(AddingContext.class,0);
		}
		public AddingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_adding; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssumptionsListener ) ((AssumptionsListener)listener).enterAdding(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssumptionsListener ) ((AssumptionsListener)listener).exitAdding(this);
		}
	}

	public final AddingContext adding() throws RecognitionException {
		return adding(0);
	}

	private AddingContext adding(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		AddingContext _localctx = new AddingContext(_ctx, _parentState);
		AddingContext _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, 16, RULE_adding, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(136);
			((AddingContext)_localctx).m1 = ((AddingContext)_localctx).multiplying = multiplying(0);
			((AddingContext)_localctx).value =  ((AddingContext)_localctx).multiplying.value;
			}
			_ctx.stop = _input.LT(-1);
			setState(146);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new AddingContext(_parentctx, _parentState);
					_localctx.a = _prevctx;
					_localctx.a = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_adding);
					setState(139);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(140);
					match(MUL);
					setState(141);
					((AddingContext)_localctx).m2 = ((AddingContext)_localctx).multiplying = multiplying(0);
					((AddingContext)_localctx).value =  new Multiplication(((AddingContext)_localctx).a.value, ((AddingContext)_localctx).m2.value);
					}
					} 
				}
				setState(148);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,8,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class MultiplyingContext extends ParserRuleContext {
		public Expression value;
		public MultiplyingContext m;
		public Token VAR;
		public TermContext t1;
		public TermContext t2;
		public VariableContext v;
		public TermContext t3;
		public TerminalNode VAR() { return getToken(AssumptionsParser.VAR, 0); }
		public TerminalNode OB() { return getToken(AssumptionsParser.OB, 0); }
		public TerminalNode CB() { return getToken(AssumptionsParser.CB, 0); }
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(AssumptionsParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(AssumptionsParser.COMMA, i);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public TerminalNode ZERO() { return getToken(AssumptionsParser.ZERO, 0); }
		public TerminalNode NEXT() { return getToken(AssumptionsParser.NEXT, 0); }
		public MultiplyingContext multiplying() {
			return getRuleContext(MultiplyingContext.class,0);
		}
		public MultiplyingContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multiplying; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof AssumptionsListener ) ((AssumptionsListener)listener).enterMultiplying(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof AssumptionsListener ) ((AssumptionsListener)listener).exitMultiplying(this);
		}
	}

	public final MultiplyingContext multiplying() throws RecognitionException {
		return multiplying(0);
	}
